data dump refactor